src/test/deca/context/valid/ClassMathode16.deca
// Description:
//    mathode de type meme class
// Resultats:
//    OK
// 
// Historique:
//    cree le 01/01/2022
class A {
	A m() {
		return new A();
	}
}

{
    A h=new A();
}
