src/test/deca/context/invalid/classmethode2.deca
class A{
    int a;
    methode(){
        return a;
    }
} 
{
    int a=new A();
    
}